--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ before_script:
   - chmod +x shuttle-linux-amd64
   - sudo mv shuttle-linux-amd64 /usr/local/bin/shuttle
 
+
 jobs:
   include:
-    - stage: tests
+    - stage: build
       script:
-        - shuttle run linter
+        - make build
